--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Zermeno94/EMPLOYEE-TRACKER#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "mysql2": "^2.3.2"
   }
 }
